--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.asterixcode</groupId>
-    <artifactId>spring-boot-security</artifactId>
+    <artifactId>security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-security</name>
-    <description>spring-boot-security</description>
+    <name>security</name>
+    <description>Demo project for Spring Boot 3 and Spring Security 6</description>
     <properties>
         <java.version>21</java.version>
     </properties>
